--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,24 @@
-.popup__title {
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
-    margin: 0 0 54px;
-    padding: 0;
+.popup__title{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 900;
+font-size: 24px;
+line-height: 29px;
+width: 330px;
+height: 23px;
+margin-top: 34px;
+margin-left: 36px;
+margin-right: 64px;
+margin-bottom: 0;
+color: #000000;
 }
 
-@media only screen and (max-width: 767px) {
-    .popup__title {
-        margin: 0 0 75px;
-        font-size: 18px;
-        line-height: 22px;
+@media (max-width:600px){
+    .popup__title{
+      font-size: 18px;
+      line-height: 22px;
+      width: 238px;
+      height: 46px;
+      margin: 0 auto 75px auto;
     }
-}
+  }
