--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,11 +1,7 @@
-.card__image {
+.card__image{
     width: 100%;
-    object-fit: cover;
-    object-position: center;
-    border-radius: 10px 10px 0 0;
+    /* object-fit: cover;
+    object-position: center; */
     height: 282px;
-}
-
-.card__image:hover {
-    cursor: pointer;
+    border-radius: 10px;
 }
