--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,11 +1,12 @@
-.card__title {
-    max-width: 210px;
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.card__title{
+width: 246px;
+height: 23px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 900;
+font-size: 24px;
+line-height: 29px;
+color: #000000;
+margin: 0;
+padding: 0;
 }
