--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,10 @@
-.elements {
-    margin: 0;
-    padding-top: 51px;
-    box-sizing: border-box;
+.elements{
     width: 100%;
     display: grid;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    margin-top: 46.25px;
     grid-template-columns: repeat(auto-fit, 282px);
     gap: 20px 17px;
     place-content: center;
@@ -11,12 +12,12 @@
 
 @media only screen and (max-width: 900px) {
     .elements {
-        width: calc(100% - 38px);
+      width: calc(100% - 38px);
     }
-}
-
-@media only screen and (max-width: 767px) {
+  }
+  
+  @media only screen and (max-width: 767px) {
     .elements {
-        padding-top: 36px;
+      padding-top: 36px;
     }
-}
+  }
