--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,12 @@
-.page {
-  margin: 0;
-  padding: 0;
-  background-color: #000;
-  font-family: 'Inter', Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    .page {
+      margin: 0;
+      padding: 0;
+      background-color: #000;
+      font-family: 'Inter', Arial, sans-serif;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }    
+  
