--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,25 +1,26 @@
-.popup__submit {
-    margin: 0;
-    border: none;
-    padding: 14px 0;
+.popup__submit{
     background: #000;
     border-radius: 2px;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
     color: #fff;
-    transition: opacity .2s ease-out;   
+    width: 365px;
+    height: 50px;
+    margin: 48px 0px 37px 36px;
 }
-
-.popup__submit:hover {
-    cursor: pointer;
-    opacity: .8;
-}
-
-@media only screen and (max-width: 767px) {
-    .popup__submit {
-        padding: 14.5px 0;
-        font-size: 14px;
-        line-height: 17px;
+  
+  @media (max-width:600px){
+    .popup__submit{
+      font-size: 14px;
+      line-height: 17px;
+      min-height: 46px;
+      width: 238px;
+      height: 46px;
+      margin: 30px 0px 0px 24px;
     }
-}
+  }
+  
+  .popup__submit:hover{
+    opacity: 0.8;
+  }
