--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,20 +1,11 @@
-.popup {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background: rgba(0, 0, 0, .5);
-    top: 0;
+.popup{
+    position: fixed;
     left: 0;
-    visibility: hidden;
-    opacity: 0;
-    transition: all .35s ease-in-out;
-    box-sizing: border-box;
-}
-
-@media only screen and (max-width: 767px) {
-    .popup {
-        padding: 0 19px;
-    }
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
 }
