--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,25 +1,20 @@
 .profile__add-button{
-        width: 150px;
-        height: 50px;
-        background: url(../../../images/add.svg) no-repeat;
-        background-position: center;
-        background-size: 22px 22px;
-        margin: 0;
-        padding: 0;
-        border: 2px solid #fff;
-        transition: opacity .2s ease-out;
+    width: 150px;
+    height: 50px;
+    background: url(../../../images/add.svg) no-repeat;
+    background-position: center;
+    background-size: 22px 22px;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #fff;
+}
+
+@media only screen and (max-width: 767px) {
+    .profile__add-button {
+      width: 100%;
     }
-    
-    @media (hover: hover) {
-        .profile__add-button:hover {
-            cursor: pointer;
-            opacity: .6;
-        }
+  }
+
+  .profile__add-button:hover{
+    opacity: 0.5;
     }
-    
-    @media only screen and (max-width: 767px) {
-        .profile__add-button {
-            width: 100%;
-        }
-    }
-    
