--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,16 +1,19 @@
-.profile__description {
-    margin: 0;
-    padding: 0;
-    grid-area: descr;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
+.profile__description{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 22px;
+color: #fff;
+margin: 0;
+padding: 0;
+grid-area: description;
+margin-bottom: 22px;
 }
 
 @media only screen and (max-width: 767px) {
     .profile__description {
-        font-size: 14px;
-        line-height: 17px;
+      font-size: 14px;
+      line-height: 17px;
     }
 }
