--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,34 +1,28 @@
-.profile__edit-button {
-    padding: 0;
+.profile__edit-button{
+    grid-area: edit;
     background: url(../../../images/edit.svg) no-repeat;
     background-size: 10px 10px;
     background-position: center;
     border: 1px solid #fff;
-    grid-area: edit;
+    cursor: pointer;
+    transition:  0.2s ease-out;
+    padding: 0;
+    margin: 0;
     width: 24px;
     height: 24px;
-    align-self: flex-end;
-    justify-self: center;
     margin-left: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: opacity .2s ease-out;
-}
-
-@media (hover: hover) {
-    .profile__edit-button:hover {
-        cursor: pointer;
-        opacity: .6;
-    }
+    margin-top: 37px;
 }
 
 @media only screen and (max-width: 767px) {
-    .profile__edit-button {
-        align-self: center;
-        margin-left: 10px;
-        width: 18px;
-        height: 18px;
-        background-size: 7.5px 7.5px;
+    .profile__edit {
+      align-self: center;
+      margin-left: 10px;
+      width: 18px;
+      height: 18px;
+      background-size: 7.5px 7.5px;
     }
-}
+  }
+  .profile__edit-button:hover{
+    opacity: 0.5;
+  }
