--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,19 +1,21 @@
-.profile__name {
-    margin: 0;
-    padding: 0;
-    grid-area: title;
-    color: #fff;
-    align-self: flex-end;
-    font-size: 42px;
-    font-weight: 500;
-    line-height: 48px;
+.profile__name{
+margin: 0;
+padding: 0;
+grid-area: name;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 42px;
+line-height: 48px;
+color: #FFFFFF;
+margin-top: 22px;
 }
 
 @media only screen and (max-width: 767px) {
     .profile__name {
-        align-self: unset;
-        margin: 0 0 14px 0;
-        font-size: 27px;
-        line-height: 33px;
+      align-self: unset;
+      margin: 0 0 14px 0;
+      font-size: 27px;
+      line-height: 33px;
     }
-}
+  }
