--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,3 +9,12 @@
     justify-content: center;
     align-items: center;
 }
+
+
+@media (max-width: 600px)
+{
+    .popup{
+        top: 173px;
+}
+};
+    
