--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,7 +2,7 @@
     width: 25px;
     height: 19px;
     background: url(../../../images/Group.svg) no-repeat;
-    margin: 0;
+    margin: 0px 8px 0px 0px;
     padding: 0;
     border: none;
     justify-content: center;
