--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,12 +1,14 @@
 .card__title{
-width: 246px;
-height: 23px;
-font-family: 'Inter';
-font-style: normal;
-font-weight: 900;
-font-size: 24px;
-line-height: 29px;
-color: #000000;
-margin: 0;
-padding: 0;
+    width: 246px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 25px;
+    color: #000000;
+    margin: 0px 0px 0px 0px;
+    padding: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
