--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -18,6 +18,7 @@
   
   @media only screen and (max-width: 767px) {
     .elements {
-      padding-top: 36px;
+      padding-top: 34px;
+      margin: 0;
     }
   }
