--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -14,6 +14,8 @@
   @media only screen and (max-width: 767px) {
     .header__logo {
       width: 104px;
+      width: 104px;
+      margin: 18px 0px 0px 27px;
     }
   }
   
