--- a/blocks/popup/__exit/popup__exit.css
+++ b/blocks/popup/__exit/popup__exit.css
@@ -2,18 +2,22 @@
     border: none;
     padding: 0;
     position: absolute;
-    left: 436px;
-    top: -35px;
+    left: 439px;
+    top: -40px;
     width: 32px;
     height: 32px;
     background: url(../../../images/Close\ Icon.svg);
+    position: absolute;
 }
 
 @media (max-width:600px){
     .popup__exit{
         position: absolute;
-        left: 331px;
-        top: -28px;
+        left: 262px;
+        top: -42px;
+        background: url(../../../images/exit.svg);
+        width: 20px;
+        height: 20px;
     }
   }
   
