--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -4,12 +4,15 @@
     background: #FFFFFF;
     border-radius: 10px;
     position: relative;
+    bottom: 160px;
 }
 
 @media (max-width:600px){
-    .popup__form{
-      max-width: 282px;
-      min-height: 322px;
-      padding: 25px 22px;
+        .popup__form {
+            width: 282px;
+            height: 322p;
+            padding: 0;
+            margin: 48px 0 0 0;
+            min-height: 320px;
     }
   }
