--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -19,6 +19,6 @@ color: #000000;
       line-height: 22px;
       width: 238px;
       height: 46px;
-      margin: 0 auto 75px auto;
+      margin: 20px auto 0px auto;
     }
   }
