--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,17 +3,18 @@ font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
-line-height: 22px;
+line-height: 18px;
 color: #fff;
 margin: 0;
 padding: 0;
 grid-area: description;
-margin-bottom: 22px;
+margin: -12px 0px 0 30px;
 }
 
 @media only screen and (max-width: 767px) {
     .profile__description {
       font-size: 14px;
       line-height: 17px;
+      margin: 8px 0px 0px 0;
     }
 }
