--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,17 +10,18 @@
     margin: 0;
     width: 24px;
     height: 24px;
-    margin-left: 18px;
+    margin-left: 19px;
     margin-top: 37px;
 }
 
 @media only screen and (max-width: 767px) {
-    .profile__edit {
+    .profile__edit-button {
       align-self: center;
       margin-left: 10px;
       width: 18px;
       height: 18px;
       background-size: 7.5px 7.5px;
+      margin: 6px 0 0px 11px;
     }
   }
   .profile__edit-button:hover{
