--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-    margin: 45px 0 0 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     width: 100%;
@@ -18,6 +18,6 @@
     .profile {
         text-align: center;
         flex-direction: column;
-        gap: 36px;
+        gap: 32px;
     }
 }
