--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -5,7 +5,7 @@
     grid-template-areas:
         'avatar name edit'
         'avatar description .';
-    row-gap: 0px
+    row-gap: 0px;
 }
 
 @media only screen and (max-width: 767px) {
