--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -3,5 +3,6 @@
     /* object-fit: cover;
     object-position: center; */
     height: 282px;
-    border-radius: 10px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
