--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,7 +1,6 @@
 .card{
-    margin: 0;
+    margin-top: 6px;
     padding: 0;
     border-radius: 10px;
-    height: 362px;
     background: #fff;
 }
