--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,12 +4,11 @@
     box-sizing: border-box;
     width: 100%;
     margin-top: 45px;
-    border-bottom: 2px solid #54545470;
-    height: 74px;
+    border-bottom: 2px solid #545454;
 }
 
 @media only screen and (max-width: 767px) {
     .header {
-        margin-top: 10px;
+        margin: 22px 0px 26px 26px;
     }
   }
