--- a/blocks/main/main.css
+++ b/blocks/main/main.css
@@ -7,3 +7,16 @@
     flex-direction: column;
     align-items: center;
 }
+
+
+@media only screen and (max-width: 767px) {
+    .main {
+        margin: 0;
+        padding: 18px 0 0 0;
+        box-sizing: border-box;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+  }
