--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -2,7 +2,7 @@
     margin: 48px 0px 0px 34px;
     border: none;
     border-bottom: 1px solid #000000;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -10,11 +10,17 @@
     color: #000000;
     width: 358px;
     height: 27px;
+
 }
 
 @media (max-width:600px){
-    .popup__field{
-width: 238px;
-height: 27px;
-margin: 45px 0 0 20px;
-}}
+.popup__field{
+    margin: 45px 0 0 20px;
+}
+}
+
+
+.popup__field:focus {
+opacity: 0.2;
+border: 1px solid #000000;
+  }
