--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -10,7 +10,7 @@
 @media (max-width:600px){
         .popup__form {
             width: 282px;
-            height: 322px;
+            height: 322p;
             padding: 0;
             margin: 48px 0 0 0;
             min-height: 320px;
