--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,6 +8,7 @@
     display: none;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 
