--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,9 +4,11 @@
     background: url(../../../images/add.svg) no-repeat;
     background-position: center;
     background-size: 22px 22px;
+    cursor: pointer;
     margin: 0;
     padding: 0;
     border: 2px solid #fff;
+    border-radius: 2px solid #fff;
 }
 
 @media only screen and (max-width: 767px) {
@@ -16,5 +18,5 @@
   }
 
   .profile__add-button:hover{
-    opacity: 0.5;
+    opacity: 60%;
     }
