--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,5 +1,5 @@
 .profile__description{
-font-family: 'Inter';
+font-family: 'Inter', 'Arial', sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
@@ -8,6 +8,9 @@ color: #fff;
 padding: 0;
 grid-area: description;
 margin: -12px 0px 0 30px;
+text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
 }
 
 @media only screen and (max-width: 767px) {
