--- a/pages/index.css
+++ b/pages/index.css
@@ -19,12 +19,12 @@
 @import url(../blocks/card/__title/card__title.css);
 @import url(../blocks/card/__like/card__like.css);
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__content/footer_content.css);
+@import url(../blocks/footer/__content/footer__content.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/__open/popup__open.css);
+@import url(../blocks/popup/__opened/popup_opened\ .css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__exit/popup__exit.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__subtitle/popup__subtitle.css);
-@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__container/-form/popup__container-form.css);
