--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     width: 100%;
     margin-top: 45px;
-    border-bottom: 2px solid #545454;
+    border-bottom: 1px solid #545454;
 }
 
 @media only screen and (max-width: 767px) {
@@ -12,3 +12,7 @@
         margin: 22px 0px 26px 26px;
     }
   }
+
+  .profile__add-button:hover{
+    opacity: 70%;
+    }
