--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,8 +7,8 @@
     cursor: pointer;
     margin: 0;
     padding: 0;
-    border: 2px solid #fff;
-    border-radius: 2px solid #fff;
+    border: 2px solid #FFFFFF;
+    border-radius: 2px;
 }
 
 @media only screen and (max-width: 767px) {
