--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,10 +12,11 @@
     height: 24px;
     margin-left: 19px;
     margin-top: 37px;
+    border-radius: 2px;
 }
 
 @media only screen and (max-width: 767px) {
-    .profile__edit-button {
+.profile__edit-button {
       align-self: center;
       margin-left: 10px;
       width: 18px;
@@ -24,6 +25,6 @@
       margin: 6px 0 0px 11px;
     }
   }
-  .profile__edit-button:hover{
+.profile__edit-button:hover{
     opacity: 60%;
   }
