--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,6 +6,7 @@
         'avatar name edit'
         'avatar description .';
     row-gap: 0px;
+    max-width: 486px;
 }
 
 @media only screen and (max-width: 767px) {
