--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -3,14 +3,16 @@
     background: #FFFFFF;
     border-radius: 10px;
     position: relative;
+    align-items: center;
     justify-content: center;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media (max-width:600px){
 .popup__container{
     width: 282px;
     padding: 0;
-    margin: 48px 0 0 0;
+    margin: 0;
     min-height: 320px;
     }
-  }
+}  
