--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -1,27 +1,24 @@
 .popup__field{
     margin: 48px 0px 0px 34px;
     border: none;
-    border-bottom: 1px solid #000000;
+    outline: none;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+    background-color: transparent;
     width: 358px;
     height: 27px;
-
 }
 
 @media (max-width:600px){
 .popup__field{
     margin: 45px 0 0 20px;
+    max-width: 238px;
 }
 }
 
-
-.popup__field:focus {
-    opacity: 0.2;
-    border: 1px solid #000000;
-  }
 
