--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -3,11 +3,12 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
+  border: none;
   cursor: pointer;
   color: #fff;
-  width: 365px;
+  width: 358px;
   height: 50px;
-  margin: 49px 18px 37px 34px;
+  margin: 49px 18px 37px 37px;
 }
   
   @media (max-width:600px){
@@ -17,10 +18,10 @@
       min-height: 46px;
       width: 238px;
       height: 46px;
-      margin: 48px 0px 0px 22px;
+      margin: 48px 0px 25px 22px;
     }
   }
   
   .popup__submit:hover{
     opacity: 0.8;
-  }
+  } 
