--- a/blocks/popup/__subtitle/popup__subtitle.css
+++ b/blocks/popup/__subtitle/popup__subtitle.css
@@ -8,18 +8,14 @@
     line-height: 17px;
     margin: 26px 0px 0px 34px;
     border: none;
-    border-bottom: 1px solid #000000;
-    color: #000000;
+    outline: none;
+    background-color: transparent;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
 @media (max-width:600px){
 .popup__subtitle{
     margin: 27px 0 0 20px;
+    max-width: 238px;
 }
 }
-
-
-.popup__subtitle:focus {
-    opacity: 0.2;
-    border: 1px solid #000000;
-      }
