--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -18,6 +18,7 @@ color: #000000;
       line-height: 22px;
       width: 238px;
       height: 46px;
-      margin: 20px auto 0px auto;
+      margin: 0px auto 0px auto;
+      padding: 25px 0 0 0;
     }
   }
