--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -3,19 +3,16 @@
     left: 0;
     right: 0;
     top: 0;
-    bottom: 0;
+    bottom: 27%;
     background: rgba(0,0,0,.5);
     display: none;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    overflow: auto;
 }
-
-
-@media (max-width: 600px)
-{
+@media (max-width:600px){
     .popup{
-        top: 173px;
-}
-}
-    
+        bottom: 11%;
+    } 
+}    
