--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,8 +1,6 @@
 .card__image{
     width: 100%;
-    /* object-fit: cover;
-    object-position: center; */
-    height: 282px;
+    aspect-ratio: 1 / 1;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
