--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,13 +4,11 @@
     box-sizing: border-box;
     width: 100%;
     margin-top: 45px;
-    opacity: 0.7;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84,84,84,0.7);
 }
 
 @media only screen and (max-width: 767px) {
     .header {
         margin: 22px 0px 26px 0px;
     }
-  }
-
+}
