--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -9,10 +9,11 @@
   width: 358px;
   height: 50px;
   margin: 49px 18px 37px 37px;
+  border-radius: 2px;
 }
   
-  @media (max-width:600px){
-    .popup__submit{
+@media (max-width:600px){
+ .popup__submit{
       font-size: 14px;
       line-height: 17px;
       min-height: 46px;
@@ -22,6 +23,6 @@
     }
   }
   
-  .popup__submit:hover{
+.popup__submit:hover{
     opacity: 0.8;
-  } 
+}
