--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,18 +1,20 @@
-.popup{
-    position: fixed;
-    left: 0;
-    right: 0;
+.popup{ 
+    position: fixed; 
+    left: 0; 
+    right: 0; 
     top: 0;
-    bottom: 27%;
-    background: rgba(0,0,0,.5);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    overflow: auto;
-}
-@media (max-width:600px){
-    .popup{
-        bottom: 11%;
-    } 
-}    
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5); 
+    display: none; 
+    justify-content: center; 
+    align-content: center;
+    align-items: center; 
+    overflow: auto; 
+} 
+
+@media (max-width:600px){ 
+    .popup{ 
+        bottom: 11%; 
+    }  
+}  
