--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,16 +1,16 @@
-.profile__avatar{
-    border-radius: 50%;
-    padding: 0;
-    margin: 0;
-    object-fit: contain;
-    object-position: center;
-    max-width: 120px;
-    grid-area: avatar;
+.profile__avatar {
+  border-radius: 50%;
+  padding: 0;
+  margin: 0 30px 0 0;
+  object-fit: contain;
+  object-position: center;
+  max-width: 120px;
+  grid-area: avatar;
 }
 
 @media only screen and (max-width: 767px) {
-    .profile__avatar {
-      justify-self: center;
-      margin: 0 0 22px 0;
-    }
+  .profile__avatar {
+    justify-self: center;
+    margin: 0 0 22px 0;
   }
+}
