--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,4 +1,5 @@
 .card__title{
+    max-width: 210px;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     font-weight: 900;
