--- a/blocks/card/__like/card__like.css
+++ b/blocks/card/__like/card__like.css
@@ -2,7 +2,7 @@
     width: 25px;
     height: 19px;
     background-size: 22px 19px;
-    background: url(../../../images/Group.svg)no-repeat;
+    background: url(../../../images/Group.svg) no-repeat;
     margin: 0px 5px 0px 0px;
     padding: 0;
     border: none;
@@ -10,8 +10,8 @@
     background-position: center;
     cursor: pointer;
 }
-
-
+÷
 .card__like:hover{
     opacity: 0.5;
+    transition: opacity 1s ease;
   }
