--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -6,7 +6,7 @@
     font-size: 24px;
     line-height: 25px;
     color: #000000;
-    margin: 0px 0px 0px 0px;
+    margin: 0;
     padding: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
