--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -9,6 +9,7 @@
   padding: 0;
   border: 2px solid #FFFFFF;
   border-radius: 2px;
+  transition: 0.2s ease-out;
 }
 
 @media only screen and (max-width: 767px) {
