--- a/pages/index.css
+++ b/pages/index.css
@@ -21,10 +21,17 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__content/footer__content.css);
 @import url(../blocks/popup/popup.css);
-@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_opened/popup_opened\ .css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/__exit/popup__exit.css);
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__subtitle/popup__subtitle.css);
 @import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/card/__like/_on/card__like_on.css);
+@import url(../blocks/card/__trash/card__trash.css);
+@import url(../blocks/popup/__exit/_zoom/popup__exit_zoom.css);
+@import url(../blocks/popup/__zoom/popup__zoom.css);
+@import url(../blocks/popup/__zoom/_container/popup__zoom_container.css);
+@import url(../blocks/popup/__zoom/_title/popup__zoom_title.css);
+@import url(../blocks/popup/__zoom/_photo/popup__zoom_photo.css);
