--- a/blocks/popup/__exit/popup__exit.css
+++ b/blocks/popup/__exit/popup__exit.css
@@ -2,7 +2,7 @@
     border: none;
     padding: 0;
     position: absolute;
-    left: 439px;
+    right: -40px;
     top: -40px;
     width: 32px;
     height: 32px;
