--- a/blocks/popup/__input/_error/-visible/popup__input_error-visible.css
+++ b/blocks/popup/__input/_error/-visible/popup__input_error-visible.css
@@ -1,6 +1,10 @@
 .popup__input_error-visible {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
     font-size: 12px;
     line-height: 15px;
+    min-height: 24px;
     color: #FF0000;
     max-width: 358px;
     padding-left: 36px;
