--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -8,7 +8,7 @@
   margin-top: 34px;
   margin-left: 36px;
   margin-right: 64px;
-  margin-bottom: 0;
+  margin-bottom: 30px;
   color: #000000;
 }
 
