--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,4 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__input/_error/popup__input_error.css);
 @import url(../blocks/popup/__input/_error/-visible/popup__input_error-visible.css);
+@import url(../blocks/popup/__span/-container/popup__span-container.css);
