--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -18,6 +18,6 @@
     line-height: 22px;
     width: 238px;
     margin: 0px auto 0px auto;
-    padding: 25px 0 0 0;
+    padding: 0 0 25px 0;
   }
 }
