--- a/src/blocks/popup/__exit/popup__exit.css
+++ b/src/blocks/popup/__exit/popup__exit.css
@@ -7,7 +7,7 @@
     width: 32px;
     height: 32px;
     cursor: pointer;
-    background: url(../../../images/Close\ Icon.svg);
+    background: url(../../../images/Close_Icon.svg);
 }
 
 @media (max-width:600px) {
