--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -40,3 +40,7 @@
 @import url(../blocks/popup/__input/_error/popup__input_error.css);
 @import url(../blocks/popup/__input/_error/-visible/popup__input_error-visible.css);
 @import url(../blocks/popup/__span/-container/popup__span-container.css);
+@import url(../blocks/card/__like/-counter/card__like-counter.css);
+@import url(../blocks/card/__trash/_disabled/card__trash_disabled.css);
+@import url(../blocks/profile/__avatar/_change/profile__avatar_change.css);
+@import url(../blocks/profile/__avatar/_change/-button/profile__avatar_change-button.css);
