--- a/src/blocks/profile/__description/profile__description.css
+++ b/src/blocks/profile/__description/profile__description.css
@@ -7,7 +7,7 @@
   color: #fff;
   padding: 0;
   grid-area: description;
-  margin: 0px 0px 16px 0px;
+  margin: 0px 10px 16px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
