--- a/src/blocks/profile/__avatar/-button/profile__avatar-button.css
+++ b/src/blocks/profile/__avatar/-button/profile__avatar-button.css
@@ -1,21 +1,21 @@
 .profile__avatar-button{
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    width: 120px;
+    height: 120px;
+    margin: 0px;
     padding: 0;
     border: 0;
     border-radius: 50%;
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    top: 0px;
+    top: 164px;
     left: 0;
-    z-index: 10;
+    z-index: 1;
     cursor: pointer;
     opacity: 0;
 }
 
-.profile__avatar_change-button:hover{
+.profile__avatar-button:hover{
     opacity: 1;
     background-color: rgba(0, 0, 0, .8);
 } 
