--- a/src/blocks/profile/__avatar/-icon/profile__avatar-icon.css
+++ b/src/blocks/profile/__avatar/-icon/profile__avatar-icon.css
@@ -1,17 +1,17 @@
-.profile__avatar {
+.profile__avatar-icon {
   border-radius: 50%;
   padding: 0;
   margin: 0 30px 0 0;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
-  width: 120px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
-  box-sizing: border-box;
   grid-area: avatar;
 }
 
 @media only screen and (max-width: 767px) {
-  .profile__avatar {
+  .profile__avatar-icon {
     justify-self: center;
     margin: 0 0 22px 0;
   }
